--- a/Week-8/frontend/src/App.css
+++ b/Week-8/frontend/src/App.css
@@ -1,4 +1,63 @@
-.App {
+html {
+    background-color: #eee;
+    text-align: center;
+    font-family: "Arial", sans-serif;
+    font-size: 0.8em;
+}
+
+navbar {
+    background-color: #000;
+}
+
+.delete-btn {
+    background-color: rgb(173, 50, 2);
+    color: white;
+}
+
+.edit-btn {
+    background-color: rgb(114, 114, 212);
+    color: white;
+}
+
+.submit-btn {
+    background-color: green;
+    color: white;
+}
+
+.add-item {
+    background-color: rgb(211, 116, 39);
+    color: white;
+}
+
+.item {
+    width: 800px;
+    margin: 10px 5px 10px 5px;
+    display: inline-block;
+    border-top: solid 1px #000;
+}
+.item > p.wide {
+    width: 400px;
+    float: left;
+    text-align: left;
+}
+
+.item > p.medium {
+    width: 200px;
+    float: left;
+    text-align: left;
+}
+
+.item > p.narrow {
+    width: 100px;
+    float: left;
+    text-align: left;
+}
+
+.item > h1 {
+    background-color: rgb(27, 165, 22);
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +94,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
